--- a/src/assets/info/general-config.json
+++ b/src/assets/info/general-config.json
@@ -2,27 +2,40 @@
 	"initialSlug": "001",
 	"planetPath": "/planet.webm",
 	"animate": true,
-  "defaultTitle": "MSMC |",
+  "defaultTitle": "AF |",
   "icon": "/faction-logos/msmc.svg",
 	"header": {
 		"planet": "Hercynia",
-		"year": "5014u",
+		"year": "742ge",
 		"system": "Ardennes-3",
-		"gate": "Atlas-Quanokrim",
-		"ring": "Atlas-Line",
-		"headerTitle": "Mirrorsmoke",
+		"through-line": "Ajax-Mirrors-Tampel",
+		"ante-line": "50 days",
+		"headerTitle": "Astra Fortuna",
 		"headerSubtitle": "Mercenary Company",
-		"subheaderTitle": "Crisis Response",
-		"subheaderSubtitle": "Delta-Echo-Echo-Zulu"
+		"subheaderTitle": "Licensed To Operate",
+		"subheaderSubtitle": "Gamma-Indigo-Tango-Gamma-Uniform-Delta"
 	},
 	"pilotSpecialInfo": {
-		"APOLLO": {
-			"age": "32u",
-			"pob": "Evergreen"
+		"SOLITAIRE": {
+			"age": "28rt",
+			"pob": "Selen"
 		},
-		"RAI-DEN": {
-			"age": "48u",
-			"pob": "Gaia"
+		"SEPH": {
+			"age": "28?rt",
+			"pob": "REDACTED"
+		}
+		"KERES": {
+			"age": "21rt",
+			"pob": "Prosperity"
+		}"NOCTURNE": {
+			"age": "20rt",
+			"pob": "REDACTED"
+		}"NIGHTJAR": {
+			"age": "20rt",
+			"pob": "REDACTED"
+		}"SLICER": {
+			"age": "21rt",
+			"pob": "Pacific Caribbean"
 		}
 	}
 }
